# NumericalIntegration

./: .gitignore  .travis.yml  CMakeLists.txt  ComputeGaussKronrodNodesWeights.h  GaussKronrodNodesWeights.h  GaussKronrodQuadrature.h  Integrator.h  KronrodLaurieGautschi.h  LaurieGautschi.h  Monegato.h  NIHeaders.h  NIHeaders.hpp  NumericalIntegration.h  Piessens.h  PiessensOriginalFortranCode.f  QuadratureGaussKronrod.h  README.md  compile.sh  generateQK.sh  kronrodPiessens.h  main.cpp
QUADPACK routines remaining to be ported/: qagie.cpp  qagpe.cpp  qagse.cpp  qawce.cpp  qawfe.cpp  qawoe.cpp  qawse.cpp  qc25c.cpp  qc25f.cpp  qc25s.cpp  qcheb.cpp  qelg.cpp  qk15i.cpp  qk15w.cpp  qmomo.cpp  qng.cpp
cmake/: FindGMP.cmake  FindMPFR.cmake  FindMPFRCPP.cmake  FindQuantLib.cmake
doc/: Doxyfile.in  ImportantPapers.md  ImportantPapers.md~  Kronrod Development Notes
docs/: CMakeLists.txt
examples/: CMakeLists.txt  Integration.cpp
mcom_article/: CMakeLists.txt  mcom-l.cls  numericalIntegration.tex
nodes_weights/: PiessensOriginalFortranCode.f  kronrodLaurieGautschi.h  kronrodLaurieGautschi.hpp  kronrodLaurieGautschi_MS.h  kronrodLaurieGautschi_MS.hpp  kronrodLaurieGautschi_STB.hpp  kronrodPiessens.h  kronrodPiessens.hpp  kronrodPiessensClass.h  main.cpp
progress/: comparison_with_QuantLib.md  ms_2014_dec_5.md  ms_2014_dec_9.md  ms_2014_nov_23.md  ms_2014_oct_04.md  ms_2014_sep_20.md  ms_2014_sep_22.md  nodes_weights_float.txt  stb_2014_nov_30.md  stb_2014_oct_01.md  stb_2014_sep_14.md  stb_2014_sep_18.md
quadrature/: CMakeLists.txt  Integrator.h  Integrator.hpp  IntegratorDefinitions.h  IntegratorTest.cpp  IntegratorTest_STB.cpp  PiessensValuesQuadratureKronrod.h  QuadratureKronrod.h  QuadratureKronrod.hpp  QuadratureKronrodPiessens.h  QuadratureKronrod_STB.hpp
source/: GaussKronrodNodesWeights.h  Integrator.h  LaurieGautschi.h  Monegato.h  NumericalIntegration.h  Piessens.h
test/: CMakeLists.txt  generateGaussKronrodQuadrature.cpp  generateQuadratureGaussKronrod.cpp  generateQuadratureKronrodHeader.cpp  outputKronrodNodesWeights.cpp  outputKronrodNodesWeights2.cpp  testComputeNodesWeights.cpp  testIntegrator_InfiniteInterval.cpp  testIntegrator_LogPow.cpp  testIntegrator_Peak.cpp  testIntegrator_Sine.cpp  testNodesAndWeightsByCompare.cpp  testQuantLib.cpp
tests/: CMakeLists.txt  IntegratorTest.cpp  outputKronrodNodesWeights.cpp  outputPiessens.cpp  testIntegrator_InfiniteInterval.cpp  testIntegrator_LogPow.cpp  testIntegrator_Oscillate.cpp  testIntegrator_Peak.cpp  testIntegrator_Pow.cpp  testIntegrator_Sine.cpp  testLaurieGautschi.cpp  testPowOverload.cpp  testQuadAssign.cpp  testQuadratureKronrad.cpp
