ADD_EXECUTABLE(outputKronrodNodesWeights outputKronrodNodesWeights.cpp)
ADD_EXECUTABLE(outputKronrodNodesWeights2 outputKronrodNodesWeights2.cpp)
ADD_EXECUTABLE(testIntegrator_InfiniteInterval testIntegrator_InfiniteInterval.cpp)
ADD_EXECUTABLE(testIntegrator_LogPow testIntegrator_LogPow.cpp)
ADD_EXECUTABLE(testIntegrator_Peak testIntegrator_Peak.cpp)
ADD_EXECUTABLE(testIntegrator_Sine testIntegrator_Sine.cpp)
ADD_EXECUTABLE(testNodesAndWeightsByCompare testNodesAndWeightsByCompare.cpp)

TARGET_LINK_LIBRARIES(outputKronrodNodesWeights ${ALL_LIBS})
TARGET_LINK_LIBRARIES(outputKronrodNodesWeights2 ${ALL_LIBS})
TARGET_LINK_LIBRARIES(testIntegrator_InfiniteInterval ${ALL_LIBS})
TARGET_LINK_LIBRARIES(testIntegrator_LogPow ${ALL_LIBS})
TARGET_LINK_LIBRARIES(testIntegrator_Peak ${ALL_LIBS})
TARGET_LINK_LIBRARIES(testIntegrator_Sine ${ALL_LIBS})
TARGET_LINK_LIBRARIES(testNodesAndWeightsByCompare ${ALL_LIBS})
